--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="headings">Александра Капустина</h1>
-    <img src="files/Sasha.jpg" alt="Kapustina">
+    <img src="Sasha.jpg" alt="Kapustina">
     <ul>
         <li><a href="#Bio"> Биография </a> </li>
         <li><a href="#Child">Детство</a></li>
